--- a/Src/loggers/CMakeLists.txt
+++ b/Src/loggers/CMakeLists.txt
@@ -6,10 +6,11 @@ set(LOGGERS_SOURCES
     event_logger.c
     experiment_logger.c
     fits_in_bits.c
+    downlink_logs.c
+    logger_to_flash.c
 )
 
 set( MOCK_FLASH_SOURCES
-    mockup_flash/logger_to_flash.c
     mockup_flash/mock_flash_driver.c
 )
 
@@ -21,9 +22,12 @@ add_executable(IntellisatLoggers
 
 add_library(IntellisatLoggersLib
     ${LOGGERS_SOURCES}
+    ${MOCK_FLASH_SOURCES}
 )
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
 target_include_directories(IntellisatLoggers PUBLIC ./ ./mockup_flash)
 target_include_directories(IntellisatLoggersLib PUBLIC ./ ./mockup_flash)
+
+target_compile_definitions(IntellisatLoggersLib PUBLIC NO_OP)
